adding initial digitpeating functionality

--- a/direwolf.conf
+++ b/direwolf.conf
@@ -1,6 +1,9 @@
 ADEVICE stdin null
+#PTT GPIO 25
 ARATE 24000
-CHANNEL 0
+#CHANNEL 0
+TXDELAY 30
+TXTAIL 10
 
 # Set your callsign here with its appropriate APRS SSID
 # I use SSID 10 for igate
@@ -20,4 +23,18 @@ IGSERVER noam.aprs2.net
 IGLOGIN XXXXXX-10 0123
 
 # Set your GPS coordinates for the igate to show up on the map
-PBEACON sendto=IG delay=0:30 every=60:00 symbol="%SYMBOL%" overlay=R lat=%LATITUDE% long=%LONGITUDE% comment="%COMMENT%"
+PBEACON sendto=IG delay=0:20 every=20:00 symbol="%SYMBOL%" overlay=R lat=%LATITUDE% long=%LONGITUDE% comment="%COMMENT%"
+PBEACON delay=0:20 every=20:00 symbol="%SYMBOL%" overlay=R lat=%LATITUDE% long=%LONGITUDE% comment="%COMMENT%"
+
+#IGTXVIA 0 WIDE1-1
+
+#Set RF->RF Local Filter
+#FILTER_RF_RF 
+
+#Set Internet->RF Local Filter
+#FILTER_IG_RF 
+
+#Set Internet->RF Server-side Filter
+#IGFILTER
+
+#DIGIPEAT 0 0 ^WIDE[3-7]-[1-7]$ ^WIDE[12]-[12]$|^MA[1-7]-[1-7]$
